# neo-tts

./: .dockerignore  .env.example  .gitattributes  .gitignore  NOTICE  README.md  README_zh.md  api_server.py  export_onnx.py  onnx2trt.py  onnx_to_fp16.py  onnx_validation.py  pyproject.toml  requirements.txt  run_inference.py  run_long_inference.py  run_onnx_inference.py  run_onnx_long_inference.py  run_onnx_streaming_inference.py  run_optimized_inference.py  run_streaming_inference.py  run_trt_inference.py  start_dev.bat  test.txt  使用教程.txt
GPT_SoVITS/: sv.py
GPT_SoVITS/eres2net/: ERes2NetV2.py
GPT_SoVITS/module/: models.py
GPT_SoVITS/text/: .gitignore  chinese2.py  cleaner.py  japanese.py  korean.py
backend/: __init__.py
backend/app/: __init__.py  cli.py  main.py
backend/scripts/: benchmark_edit_session.py  migrate_legacy_voices_to_registry.py
backend/tests/: conftest.py
config/: launch.json.example  voices.json
desktop/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
desktop/packaging/: python-blacklist.txt  python-runtime-prune.txt  update-package-policy.json
desktop/scripts/: assemble-portable.ps1  build-integrated-package.ps1  build-layered-release.ps1  build-offline-update-package.ps1  stage-runtime.ps1  test-portable-offline-update.ps1  write-update-manifest.ps1
desktop/src/: main.ts  preload.ts
desktop/tests/: backend.process.test.ts  bootstrapClient.test.ts  createMainWindow.test.ts  electronBuilderIcon.test.ts  layeredReleaseScripts.test.ts  main.test.ts  packagedPythonRuntimePrep.test.ts  packagingPerformanceScripts.test.ts  packagingTutorialInclusion.test.ts  preload.test.ts  runtime.paths.test.ts  runtimeDescriptor.test.ts  (+1 more)
docker/: Dockerfile  Dockerfile-cpu  requirements-cpu.txt
docs/: commit规范.md  系统术语和对应.md
frontend/: components.d.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
launcher/: build-bootstrap.ps1  build.ps1  go.mod  launcher.json.example
tests/: test_onnx_sampling.py
(+577 files in other folders)
